# mac-speech

./: .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
docs/: architecture.md
mockups/: bottom-voice-bar.html
src/: App.vue  web-speech.d.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: macos_accessibility_prompt.m  macos_speech_bridge.m  main.rs
src/components/: BottomAnchor.vue  MainPanel.vue  SidebarNavIcon.vue
src/components/pages/: AccountPage.vue  DictionaryPage.vue  GeneralPage.vue  HelpPage.vue  HistoryPage.vue  OverviewPage.vue  SpeechPage.vue
src/composables/: useSpeechOverlay.ts
src/engines/: localWhisperTranscriber.ts  types.ts  webSpeechEngine.ts
