[package]
name = "iterate-speech"
version = "0.1.0"
edition = "2021"

[build-dependencies]
cc = "1"
tauri-build = { version = "2.0", features = [] }

[dependencies]
cocoa = "0.26.1"
core-foundation = "0.10.1"
core-graphics = "0.25.0"
objc = "0.2.7"
chrono = "0.4"
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0", features = ["image-png", "tray-icon", "macos-private-api"] }
tauri-plugin-clipboard-manager = "2.3.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
